          --id=@N create Flow_Table \
                    name=table123 prefixes=nw_dst,nw_src,ipv6_dst,ipv6_src
   - Address prefix tracking is now enabled by default for both IPv4 and IPv6
     address fields: nw_dst, nw_src, ipv6_dst and ipv6_src.
     This allows to significantly reduce amount of datapath flows generated
     from mixed IPv4+IPv6 flow tables.
   - Userspace datapath:
     * The default zone limit, if set, is now inherited by any zone
       that does not have a specific value defined, rather than being
       treated as a global value, aligning the behavior with that of
       the kernel datapath.
   - Linux TC offload:
     * Add support for matching tunnel flags if the kernel supports it.
     * Add support for the "Don't Fragment" (DF) flag in the encap action,
       if the kernel supports it.
   - Python:
     * Added tool called "ovs-flowviz" capable of parsing OpenFlow
       and datapath flow dumps and displaying them in several different
       formats.
   - DPDK:
     * OVS validated with DPDK 23.11.2.
     * Add hardware offload support for matching ICMPv6 protocol
       (experimental).
   - Tunnels:
     * LISP and STT tunnel port types are deprecated and will be removed in
       the next release.


v3.4.0 - 15 Aug 2024
--------------------
   - Option '--mlockall' now only locks memory pages on fault, if possible.
     This also makes it compatible with vHost Post-copy Live Migration.
   - ovs-appctl:
     * Added new option [-f|--format] to choose the output format, e.g. 'json'
       or 'text' (by default).
     * Added new option [--pretty] to print JSON output in a readable fashion.
     * 'dpif/show' and 'list-commands' now support output in JSON format.
     * Added 'ofproto/detrace' command that outputs the set of OpenFlow rules
       and groups that contributed to the creation of a specific datapath flow.
   - ovs-vsctl:
     * Added a new filter column in the Mirror table which can be used to